Category - Add and Update functionality

--- a/BlazorApp_Server/_Imports.razor
+++ b/BlazorApp_Server/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using BlazorApp_Server
 @using BlazorApp_Server.Shared
+@using BlazorApp_Models
+@using BlazorApp_Business.Repository.IRepository
