--- a/BlazorApp_Server/Pages/Category/CategoryList.razor
+++ b/BlazorApp_Server/Pages/Category/CategoryList.razor
@@ -1,7 +1,9 @@
 ﻿@page "/category"
 
 @inject ICategoryRepository _categoryRepository
+@inject IJSRuntime _jsRuntime
 
+<_DeleteConfirmation IsProcessing="IsLoading" ConfirmationChanged="ConfirmDelete"></_DeleteConfirmation>
 <div class="row mt-4">
     <div class="col-6">
         <h4 class="card-title text-primary">Kategorier</h4>
@@ -28,6 +30,7 @@
                             </td>
                             <td>
                                 <NavLink href="@($"category/edit/{objCat.Id}")" class="btn btn-primary">Rediger</NavLink>
+                                <button class="btn btn-danger" @onclick="()=>HandleDelete(objCat.Id)">Slett</button>
                             </td>
                         </tr>
                     }
@@ -39,7 +42,7 @@
         {
             if (IsLoading)
             {
-                <div class="text-center" style="text-align:center">
+                <div class="text-center">
                     <div class="loader"></div>
                 </div>
             }
@@ -54,15 +57,41 @@
 @code {
     private IEnumerable<CategoryDto> Categories { get; set; } = new List<CategoryDto>();
     public bool IsLoading { get; set; } = true;
+    private int DeleteCategoryId { get; set; } = 0;
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        await Task.Run(LoadCategories);
+        if (firstRender)
+        {
+            await LoadCategories();
+        }
+
     }
 
-    private void LoadCategories()
+    private async Task LoadCategories()
     {
-        Categories = _categoryRepository.GetAll();
+        IsLoading = true;
+        StateHasChanged();
+        Categories = await _categoryRepository.GetAll();
+        IsLoading = false;
+        StateHasChanged();
+    }
+
+    private void HandleDelete(int id)
+    {
+        DeleteCategoryId = id;
+        _jsRuntime.InvokeVoidAsync("ShowDeleteConfirmationModal");
+    }
+
+    public async Task ConfirmDelete(bool isConfirmed)
+    {
+        IsLoading = true;
+        if(isConfirmed && DeleteCategoryId !=0)
+        {
+            await _categoryRepository.Delete(DeleteCategoryId);
+            await _jsRuntime.InvokeVoidAsync("HideDeleteConfirmationModal");
+            await LoadCategories();
+        }
         IsLoading = false;
     }
 }
