--- a/BlazorApp_Server/Shared/NavMenu.razor
+++ b/BlazorApp_Server/Shared/NavMenu.razor
@@ -16,7 +16,12 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/category">
-                <span class="oi oi-plus" aria-hidden="true"></span> Category
+                <span class="oi oi-plus" aria-hidden="true"></span> Kategorier
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/product">
+                <span class="oi oi-plus" aria-hidden="true"></span> Produkter
             </NavLink>
         </div>
     </nav>
