--- a/BlazorApp_Server/_Imports.razor
+++ b/BlazorApp_Server/_Imports.razor
@@ -10,3 +10,5 @@
 @using BlazorApp_Server.Shared
 @using BlazorApp_Models
 @using BlazorApp_Business.Repository.IRepository
+@using BlazorApp_Server.Service.IService
+@using BlazorApp_Server.Helper
