--- a/BlazorApp_Server/_Imports.razor
+++ b/BlazorApp_Server/_Imports.razor
@@ -12,3 +12,4 @@
 @using BlazorApp_Business.Repository.IRepository
 @using BlazorApp_Server.Service.IService
 @using BlazorApp_Server.Helper
+@using Syncfusion.Blazor.RichTextEditor
