--- a/BlazorApp_Server/Pages/Product/ProductUpsert.razor
+++ b/BlazorApp_Server/Pages/Product/ProductUpsert.razor
@@ -28,7 +28,7 @@
                 </div>
                 <div class="form-group">
                     <label>Beskrivelse</label>
-                    <InputTextArea @bind-Value="Product.Description" class="form-control"></InputTextArea>
+                    <SfRichTextEditor @bind-Value="Product.Description"></SfRichTextEditor>
                     <ValidationMessage For="()=>Product.Description"></ValidationMessage>
                 </div>
                 <div class="form-group">
