--- a/BlazorApp_Server/_Imports.razor
+++ b/BlazorApp_Server/_Imports.razor
@@ -13,3 +13,4 @@
 @using BlazorApp_Server.Service.IService
 @using BlazorApp_Server.Helper
 @using Syncfusion.Blazor.RichTextEditor
+@using Syncfusion.Blazor.Grids
